# PythonScrapeWithRequest

./: Pipfile  README.md  pyproject.toml  setup.py
PythonScrapeWithRequest/: companyCoordinate.txt  companyInfo.txt  config.ini  main.py  pipelines.py
PythonScrapeWithRequest/Libs/companyInfo/: lib_scrapy.py
PythonScrapeWithRequest/Libs/industryCategory/: lib_scrapy.py
PythonScrapeWithRequest/Model/: companyCoordinate.py  companyInfo.py  industryCategory.py
PythonScrapeWithRequest/Scrapy/: scrapy.py
PythonScrapeWithRequest/Settings/: companyCoordinate.py  companyInfo.py  industryCategory.py
PythonScrapeWithRequest/SettingsData/: companyInfo.py  industryCategory.py
PythonScrapeWithRequest/Spiders/: companyInfo.py  industryCategory.py
pythonScrapeWithRequest.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
