[tool.poetry]
name = "pythonscrapewithrequest"
version = "0.1.0"
description = ""
authors = ["wayne011872 <wayne011872@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pythongeneral = {path = "../pythonGeneral"}
fake-useragent = "^1.1.3"
requests = "^2.28.2"
bs4 = "^0.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
